Kubernetes/my-service-project.yml
apiVersion: v1
kind: Service
metadata:
  name: disneyland-rating-prediction-service
  labels:
    app: disneyland-rating-prediction-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: disneyland-rating-prediction-api
